Apply changes from scp-cf-spring archetype version 2.1.0